--- a/sass/_loop_pagination.scss
+++ b/sass/_loop_pagination.scss
@@ -1,6 +1,7 @@
 .pagination {
   clear: both;
   margin: $baseline-height/2 0;
+  padding: 0 $column * 2;
 
   a,
   span {
@@ -17,10 +18,18 @@
   }
 }
 
+@media all and (min-width: $six-hundred) {
+
+  .pagination {
+    padding: $baseline-height/2 $column 0;
+    border-top: solid 1px $color-gray-86;
+  }
+}
+
 @media all and (min-width: $eight-hundred) {
 
   .pagination {
     border-top: solid 1px $color-gray-86;
-    padding-top: $baseline-height;
+    padding: $baseline-height 0 0 0;
   }
 }
