--- a/sass/_post.scss
+++ b/sass/_post.scss
@@ -74,9 +74,13 @@
   border-top: solid 1px $color-gray-86;
   border-bottom: solid 1px $color-gray-86;
 
+  &:after {
+    @include clearfix;
+  }
   .avatar-container {
     float: left;
     margin-right: $baseline-height/2;
+    line-height: 0;
   }
   .avatar {
     border-radius: 50%;
@@ -170,7 +174,6 @@
       &:nth-child(odd) {
         padding-right: $baseline-height/2;
         border-right: solid 1px $color-gray-86;
-        clear: left;
       }
       &:nth-child(even) {
         padding-left: $baseline-height/2;
