--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ textarea, input[type="submit"], .comments .comment-author .author-name, .comment
   /* 18px */
 }
 
-textarea, .comment-respond .comment-notes, .comments .comment-content, .site-footer .footer-tagline, .tagline, .widget_ct_mission_post_list .style-2 .excerpt {
+textarea, .archive-header p, .comment-respond .comment-notes, .comments .comment-content, .site-footer .footer-tagline, .tagline, .widget_ct_mission_post_list .style-2 .excerpt {
   font-size: 0.875em;
   /* 14px / 16px */
   line-height: 1.571;
@@ -427,6 +427,16 @@ a img {
 .max-width {
   max-width: 1280px;
   margin: 0 auto;
+}
+
+.archive-header {
+  margin: 0 5.556%;
+  border-bottom: solid 1px #DCDCDC;
+}
+.archive-header h1 {
+  font-size: 1em;
+  line-height: 1.5;
+  font-family: "PT Sans", sans-serif;
 }
 
 .comment-respond {
@@ -1009,6 +1019,12 @@ a img {
     padding: 1.5em 0 0 0;
   }
 }
+.content-container {
+  display: table;
+  width: 100%;
+  table-layout: fixed;
+}
+
 .main {
   display: table-header-group;
 }
@@ -1022,6 +1038,9 @@ a img {
   }
 }
 @media all and (min-width: 50em) {
+  .content-container {
+    display: block;
+  }
   .content-container:after {
     content: ".";
     display: block;
@@ -1819,9 +1838,18 @@ a img {
   border-top: solid 1px #DCDCDC;
   border-bottom: solid 1px #DCDCDC;
 }
+.post-author:after {
+  content: ".";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  line-height: 0;
+  height: 0;
+}
 .post-author .avatar-container {
   float: left;
   margin-right: 0.75em;
+  line-height: 0;
 }
 .post-author .avatar {
   border-radius: 50%;
@@ -1910,7 +1938,6 @@ a img {
   .more-from-category li:nth-child(odd) {
     padding-right: 0.75em;
     border-right: solid 1px #DCDCDC;
-    clear: left;
   }
   .more-from-category li:nth-child(even) {
     padding-left: 0.75em;
