--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ textarea, .archive-header p, .comment-respond .comment-notes, .comments .comment
   /* 18px */
 }
 
-.comment-respond .submit, .comments .comment-author .comment-date, .search-toggle span, .search-form-popup .search-submit, .dropdown-navigation a, .dropdown-navigation span, .menu-secondary-items a, .post-byline, .widget_recent_entries .post-date, .widget_rss .rss-date, .sidebar-left .widget-title,
+.comments .comment-author .comment-date, .search-toggle span, .search-form-popup .search-submit, .dropdown-navigation a, .dropdown-navigation span, .menu-secondary-items a, .post-byline, .widget_recent_entries .post-date, .widget_rss .rss-date, .sidebar-left .widget-title,
 .sidebar-right .widget-title, .widget_ct_mission_post_list .style-2 .post-byline, .widget_ct_mission_post_list .style-2 .widget_recent_entries .post-date, .widget_recent_entries .widget_ct_mission_post_list .style-2 .post-date, .widget_ct_mission_post_list .style-2 .widget_rss .rss-date, .widget_rss .widget_ct_mission_post_list .style-2 .rss-date, .widget_calendar table caption {
   text-transform: uppercase;
   letter-spacing: 0.03em;
@@ -340,6 +340,7 @@ textarea {
 
 input[type="submit"] {
   font-family: "PT Sans", sans-serif;
+  font-weight: 700;
   padding: 10px 18px;
   color: white;
   background: #000;
@@ -2003,6 +2004,40 @@ a img {
     /* 28px / 16px */
     line-height: 1.357;
     /* 38px */
+  }
+}
+.search-box h1 {
+  margin-bottom: 0.375em;
+}
+.search-box .search-form {
+  margin: 0.75em 0;
+}
+.search-box .search-submit {
+  width: 100%;
+}
+.search-box.bottom {
+  margin: 0 5.556% 1.125em;
+}
+
+@media all and (min-width: 31.25em) {
+  .search-box .search-form {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .search-box .search-submit {
+    width: auto;
+  }
+}
+@media all and (min-width: 37.5em) {
+  .search-box.bottom {
+    margin: 1.5em 2.778% 1.125em;
+    border-top: solid 1px #DCDCDC;
+  }
+}
+@media all and (min-width: 50em) {
+  .search-box.bottom {
+    margin: 1.5em 0 1.125em;
   }
 }
 .sidebar-left .inner,
