--- a/sass/_archive_header.scss
+++ b/sass/_archive_header.scss
@@ -20,6 +20,10 @@
     @extend %fourteen-pixels;
     font-style: italic;
 
+    // if title is hidden
+    &:first-child {
+      margin-top: 0;
+    }
     &:last-child {
       margin-bottom: $baseline-height/4;
     }
