updates and fixes to post widget

--- a/sass/admin.scss
+++ b/sass/admin.scss
@@ -48,6 +48,7 @@
       + p {
         transform: translateY(-4px);
         opacity: 1;
+        visibility: visible;
       }
     }
   }
@@ -60,6 +61,7 @@
     right: calc(100% + 6px);
     top: -8px;
     opacity: 0;
+    visibility: hidden;
     transition: opacity 0.25s, transform 0.25s;
   }
 }
