--- a/styles/admin.css
+++ b/styles/admin.css
@@ -44,6 +44,7 @@
   -ms-transform: translateY(-4px);
   transform: translateY(-4px);
   opacity: 1;
+  visibility: visible;
 }
 .mission-post-list-widget .tip {
   position: absolute;
@@ -54,6 +55,7 @@
   right: calc(100% + 6px);
   top: -8px;
   opacity: 0;
+  visibility: hidden;
   -webkit-transition: opacity 0.25s, -webkit-transform 0.25s;
   transition: opacity 0.25s, transform 0.25s;
 }
