--- a/sass/_archives.scss
+++ b/sass/_archives.scss
@@ -10,3 +10,21 @@
     }
   }
 }
+.entry {
+
+  &.sticky {
+    position: relative;
+  }
+}
+.sticky-status {
+  @extend %uppercase;
+  @extend %twelve-pixels;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: #000;
+  color: #fff;
+  font-family: $pt-sans;
+  padding: 6px 12px;
+  font-weight: 700;
+}
